--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ force_grid_wrap = 0
 use_parentheses = True
 line_length = 88
 default_section = THIRDPARTY
-known_first_party = {{ cookiecutter.project_slug }}
+known_first_party = deepmatcher
 
 [flake8]
 ignore = D10,E203,E266,E501,W503
