--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,20 +15,20 @@ repos:
     hooks:
     -   id: end-of-file-fixer
 
-# -   repo: https://github.com/pre-commit/pre-commit-hooks
-#     rev: v2.2.3
-#     hooks:
-#     -   id: flake8
-#         additional_dependencies: [
-#             flake8-blind-except,
-#             flake8-builtins,
-#             flake8-comprehensions,
-#             flake8-docstrings,
-#             flake8-mutable,
-#             flake8-print,
-#             flake8-quotes,
-#             flake8-tuple,
-#         ]
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.2.3
+    hooks:
+    -   id: flake8
+        additional_dependencies: [
+            flake8-blind-except,
+            flake8-builtins,
+            flake8-comprehensions,
+            flake8-docstrings,
+            flake8-mutable,
+            flake8-print,
+            flake8-quotes,
+            flake8-tuple,
+        ]
 
 -   repo: https://github.com/pre-commit/mirrors-isort
     rev: v4.3.21
