Make dataset.py lint-compliant

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ default_section = THIRDPARTY
 known_first_party = deepmatcher
 
 [flake8]
-ignore = D10,E203,E266,E501,W503
+ignore = D10,E203,E266,E501,W503,D202
 max-line-length = 88
 select = A,B,C4,D,E,F,M,Q,T,W
 inline-quotes = "
