--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,6 @@
+[tool:pytest]
+addopts = -s --strict -vv --cache-clear --maxfail=1 --cov=deepmatcher --cov-report=term --cov-report=html --cov-branch --no-cov-on-fail
+
 [isort]
 multi_line_output = 3
 not_skip = __init__.py
@@ -14,3 +17,15 @@ max-line-length = 88
 select = A,B,C4,D,E,F,M,Q,T,W
 inline-quotes = "
 docstring-convention = google
+
+[coverage:run]
+branch = True
+omit = site-packages
+
+[mypy]
+files = src/**/*.py
+python_version = 3.7
+ignore_missing_imports = True
+warn_no_return = False
+disallow_untyped_defs = True
+allow_redefinition = True
