Start using mypy

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,5 +27,5 @@ files = src/**/*.py
 python_version = 3.7
 ignore_missing_imports = True
 warn_no_return = False
-disallow_untyped_defs = True
+# disallow_untyped_defs = True  # TODO
 allow_redefinition = True
